--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,5 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - pytest # or py.test for Python versions 3.5 and below
+  - pytest
+
